tests/grammar.txt
INTEGER : {Number}+
FLOAT : {Number}+ '.' {Number}+
ID : {letter}+{alpha} | ID '.' {letter}+{alpha}

factor : PLUS factor
    | MINUS factor 
    | NOT factor
    | FLOAT 
    | INTEGER 
    | LPAREN LogicEval RPAREN
    | variable
    | string
    | boolean
    | funcCall
	| listInit
    | listAccess
    | null

string : S_QT {printable-newline} S_QT
    | D_QT {printable-newline} D_QT
    | LONG_QT {printable} LONG_QT

term : factor 
    | term (MULT|DIV) factor


expr : term 
    | expr (PLUS|MINUS) term

logicExpr : expr
    | logicExpr (AND|OR) expr

logicEval : logicExpr 
    | logicEval (GT|LT|GEQ|LEQ|EQ|NEQ) logicExpr


program : statements

statements : statement | statement nl statements

statement : assignment 
    | functionBlock
    | funcCall
    | comment
    | conditional
	| whileLoop
    | forLoop
    | plainTextNode
    | includeScript

includeScript : include LPAREN methodCall RPAREN

conditional : 'if' LPAREN logicEval RPAREN statements 'end'
    | 'if' LPAREN logicEval RPAREN statements 'else' statements 'end'
    | 'if' LPAREN logicEval RPAREN statements ('elsif' LPAREN logicEval RPAREN statements)* ('else' statements)? 'end'
	
listInit : '[' listArgs ']'

liveOutput : 'live' LPAREN args RPAREN


!listAccess : id listIndex 
!    | funcCall listIndex 
!    | listInit listIndex
!    | listAccess listIndex

listIndex : '[' logicEval ']'

listArgs : logicEval | logicEval COMMA listArgs

whileLoop : 'while' LPAREN logicEval RPAREN statements 'end'

forLoop : 'for' LPAREN list ',' ID RPAREN statements 'end'

comment : '#'{printable}*

funcCall : ID LPAREN args RPAREN

methodCall : ((ID | funcCall) '.')* | funcCall

listAccess : methodCall '[' methodCall ']'

methodObjCall : (objRef '.' | funcCall '.')+ ID LPAREN args RPAREN

args : logicEval | logicEval COMMA args

functionBlock : 'function' ID LPAREN defParams RPAREN statements 'end'

defParams: defParam | defParam COMMA defParams

defParam: ID

inBlockStatements : inBlockStatement | inBlockStatement nl inBlockStatements

inBlockStatement : assignment

assignment : variable '=' methodCall

variable : ID

boolean : 'true' | 'false'
